[gd_scene load_steps=8 format=3 uid="uid://boheg8rb4hiyd"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_5l1rm"]
[ext_resource type="Texture2D" uid="uid://ckeewqbper3fh" path="res://Assets/tilemap_packed.png" id="1_w4fgn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pl80j"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_aerp4"]
atlas = ExtResource("1_w4fgn")
region = Rect2(0, 56, 8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_xxojx"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_drg3h"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gegee"]
size = Vector2(14, 13)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_5l1rm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pl80j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -1)
texture = SubResource("AtlasTexture_aerp4")

[node name="DetectionInner" type="Area2D" parent="."]

[node name="CollisionShapeInner" type="CollisionShape2D" parent="DetectionInner"]
visible = false
shape = SubResource("CircleShape2D_xxojx")

[node name="DetectionOuter" type="Area2D" parent="."]

[node name="CollisionShapeOuter" type="CollisionShape2D" parent="DetectionOuter"]
visible = false
shape = SubResource("CircleShape2D_drg3h")
debug_color = Color(0.946025, 0.188105, 0.356576, 0.42)

[node name="DetectionAttack" type="Area2D" parent="."]

[node name="CollisionShapeAttack" type="CollisionShape2D" parent="DetectionAttack"]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gegee")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="area_entered" from="DetectionInner" to="." method="_on_detection_inner_area_entered"]
[connection signal="body_entered" from="DetectionInner" to="." method="_on_detection_inner_body_entered"]
[connection signal="area_exited" from="DetectionOuter" to="." method="_on_detection_outer_area_exited"]
[connection signal="body_exited" from="DetectionOuter" to="." method="_on_detection_outer_body_exited"]
[connection signal="body_entered" from="DetectionAttack" to="." method="_on_detection_attack_body_entered"]
[connection signal="body_exited" from="DetectionAttack" to="." method="_on_detection_attack_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
